samples/_failures_safe/1761128660_c363f9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_55968ce8.c: In function ‘main’:
./samples/SAFE/__tmp_55968ce8.c:144:13: error: expected expression at end of input
  144 |             return
      |             ^~~~~~
./samples/SAFE/__tmp_55968ce8.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55968ce8.c:144:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_55968ce8.c:144:13: error: expected declaration or statement at end of input
